--- a/css/rules.css
+++ b/css/rules.css
@@ -2,19 +2,17 @@ body {
   font-family: "Rockstar", sans-serif;
   text-align: center;
   margin: 0;
-  display: flex; /* Use flexbox to position children */
-  flex-direction: column; /* Stack children vertically */
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("/assets/dBackground.png"); /* Replace with your image URL */
+  background-image: url("/assets/dBackground.png");
   background-size: cover;
-  background-position: center; /* Center the image */
+  background-position: center;
   background-repeat: repeat;
   color: #dbdbdb;
   flex-direction: column;
 }
-
-/* Use this class for fade-out when leaving the page */
 
 h1 {
   margin-bottom: 20px;
@@ -29,8 +27,8 @@ h2 {
   font-family: "Rockstar", sans-serif;
 }
 Lato .deck-section {
-  margin: 20px 0; /* Add margins for spacing */
-  padding-bottom: 20px; /* Additional padding from the bottom */
+  margin: 20px 0;
+  padding-bottom: 20px;
 }
 
 .container {
@@ -38,8 +36,6 @@ Lato .deck-section {
   top: 60px;
   flex-direction: column;
 }
-
-/* Styling for individual cards */
 
 .cool-button {
   padding: 14px 28px;
@@ -73,28 +69,17 @@ Lato .deck-section {
 }
 
 input[type="range"] {
-  width: 300px; /* Set the width of the slider */
-  height: 8px; /* Height of the slider track */
-  background: #eee; /* Track background color */
-  border-radius: 5px; /* Rounded corners */
-  outline: none; /* Remove outline on focus */
-  margin: 10px; /* Margin around the slider */
+  width: 300px;
+  height: 8px;
+  background: #eee;
+  border-radius: 5px;
+  outline: none;
+  margin: 10px;
 }
 
-/* Custom slider thumb */
 input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none; /* Remove default thumb styling */
-  appearance: none; /* Remove default thumb styling */
-  width: 20px; /* Width of the thumb */
-  height: 20px; /* Height of the thumb */
-  background: #fff; /* Thumb color */
-  border: 2px solid #ccc; /* Border color of thumb */
-  border-radius: 50%; /* Make it circular */
-  cursor: pointer; /* Change cursor on hover */
-}
-
-/* For Firefox */
-input[type="range"]::-moz-range-thumb {
+  -webkit-appearance: none;
+  appearance: none;
   width: 20px;
   height: 20px;
   background: #fff;
@@ -102,7 +87,7 @@ input[type="range"]::-moz-range-thumb {
   border-radius: 50%;
   cursor: pointer;
 }
-/* styles.css */
+
 .switch-container {
   display: flex;
   align-items: center;
