--- a/css/cardStyle.css
+++ b/css/cardStyle.css
@@ -9,9 +9,9 @@
 section,
 div,
 span {
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 
   font-family: "Space Grotesk", "Roboto", sans-serif;
 }
