--- a/css/style.css
+++ b/css/style.css
@@ -166,3 +166,15 @@ h2 {
 .hidden {
   display: none;
 }
+
+.addFlex {
+  display: flex;
+}
+
+.addBlock {
+  display: block;
+}
+
+.textRight {
+  text-align: right;
+}
