--- a/css/style.css
+++ b/css/style.css
@@ -164,15 +164,15 @@ h2 {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .addFlex {
-  display: flex;
+  display: flex !important;
 }
 
 .addBlock {
-  display: block;
+  display: block !important;
 }
 
 .textRight {
